--- a/app/javascript/styles/wallpaper-light.scss
+++ b/app/javascript/styles/wallpaper-light.scss
@@ -99,7 +99,7 @@ body {
   background: rgba(darken($ui-base-color, 4%), 0.3);
 }
 
-/*** components.scss 1724行目 ***/
+/*** components.scss 1723行目 ***/
 
 .column {
   > .scrollable {
@@ -113,14 +113,18 @@ body {
   background: rgba(lighten($ui-base-color, 15%), 0.3);
 }
 
-/*** トゥート作成欄 components.scss 1837行目 ***/
+/*** トゥート作成・検索欄 components.scss 1836行目 ***/
 
 .drawer__inner {
   background: rgba(darken($ui-base-color, 13%), 0.3);
+
+  &.darker {
+    background: rgba($ui-base-color, 0.3);
+  }
 }
 
 .drawer__inner__mastodon {
-  background: transparent url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 234.80078 31.757813" width="234.80078" height="31.757812"><path d="M19.599609 0c-1.05 0-2.10039.375-2.90039 1.125L0 16.925781v14.832031h234.80078V17.025391l-16.5-15.900391c-1.6-1.5-4.20078-1.5-5.80078 0l-13.80078 13.099609c-1.6 1.5-4.19883 1.5-5.79883 0L179.09961 1.125c-1.6-1.5-4.19883-1.5-5.79883 0L159.5 14.224609c-1.6 1.5-4.20078 1.5-5.80078 0L139.90039 1.125c-1.6-1.5-4.20078-1.5-5.80078 0l-13.79883 13.099609c-1.6 1.5-4.20078 1.5-5.80078 0L100.69922 1.125c-1.600001-1.5-4.198829-1.5-5.798829 0l-13.59961 13.099609c-1.6 1.5-4.200781 1.5-5.800781 0L61.699219 1.125c-1.6-1.5-4.198828-1.5-5.798828 0L42.099609 14.224609c-1.6 1.5-4.198828 1.5-5.798828 0L22.5 1.125C21.7.375 20.649609 0 19.599609 0z" fill="#{hex-color(lighten($ui-base-color,4%))}"/></svg>') no-repeat bottom / 100% auto;
+  background: transparent url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 234.80078 31.757813" width="234.80078" height="31.757812"><path d="M19.599609 0c-1.05 0-2.10039.375-2.90039 1.125L0 16.925781v14.832031h234.80078V17.025391l-16.5-15.900391c-1.6-1.5-4.20078-1.5-5.80078 0l-13.80078 13.099609c-1.6 1.5-4.19883 1.5-5.79883 0L179.09961 1.125c-1.6-1.5-4.19883-1.5-5.79883 0L159.5 14.224609c-1.6 1.5-4.20078 1.5-5.80078 0L139.90039 1.125c-1.6-1.5-4.20078-1.5-5.80078 0l-13.79883 13.099609c-1.6 1.5-4.20078 1.5-5.80078 0L100.69922 1.125c-1.600001-1.5-4.198829-1.5-5.798829 0l-13.59961 13.099609c-1.6 1.5-4.200781 1.5-5.800781 0L61.699219 1.125c-1.6-1.5-4.198828-1.5-5.798828 0L42.099609 14.224609c-1.6 1.5-4.198828 1.5-5.798828 0L22.5 1.125C21.7.375 20.649609 0 19.599609 0z" fill="#{hex-color(lighten($ui-base-color,6%))}"/></svg>') no-repeat bottom / 100% auto;
 }
 
 .drawer__header {
@@ -131,7 +135,7 @@ body {
   background: rgba(darken($ui-base-color, 8%), 0.3);
 }
 
-/*** components.scss 1976行目 ***/
+/*** components.scss 1975行目 ***/
 
 .column-back-button {
   background: transparent;
@@ -196,7 +200,7 @@ body {
   background: rgba($ui-base-color, 0.3)
 }
 
-/*** components.scss 4735行目 ***/
+/*** components.scss 4746行目 ***/
 
 .community-timeline__section-headline,
 .public-timeline__section-headline,
@@ -204,7 +208,7 @@ body {
   background: rgba(lighten($ui-base-color, 4%), 0.3);
 }
 
-/*** components.scss 5162行目 ***/
+/*** components.scss 5181行目 ***/
 
 .account__header .account__header__fields {
   dt {
