--- a/app/javascript/styles/wallpaper.scss
+++ b/app/javascript/styles/wallpaper.scss
@@ -99,7 +99,7 @@ body {
   background: rgba(lighten($ui-base-color, 4%), 0.3);
 }
 
-/*** components.scss 1724行目 ***/
+/*** components.scss 1723行目 ***/
 
 .column {
   > .scrollable {
@@ -107,16 +107,20 @@ body {
   }
 }
 
-/*** UIの背景全体 components.scss 1736行目 ***/
+/*** UIの背景全体 components.scss 1735行目 ***/
 
 .ui {
   background: rgba(darken($ui-base-color, 15%), 0.3);
 }
 
-/*** トゥート作成欄 components.scss 1837行目 ***/
+/*** トゥート作成・検索欄 components.scss 1836行目 ***/
 
 .drawer__inner {
   background: rgba(lighten($ui-base-color, 13%), 0.3);
+
+  &.darker {
+    background: rgba($ui-base-color, 0.3);
+  }
 }
 
 .drawer__inner__mastodon {
@@ -131,7 +135,7 @@ body {
   background: rgba(lighten($ui-base-color, 8%), 0.3);
 }
 
-/*** components.scss 1976行目 ***/
+/*** components.scss 1975行目 ***/
 
 .column-back-button {
   background: transparent;
@@ -196,7 +200,7 @@ body {
   background: rgba($ui-base-color, 0.3)
 }
 
-/*** components.scss 4735行目 ***/
+/*** components.scss 4746行目 ***/
 
 .community-timeline__section-headline,
 .public-timeline__section-headline,
@@ -204,7 +208,7 @@ body {
   background: rgba(darken($ui-base-color, 4%), 0.3);
 }
 
-/*** components.scss 5162行目 ***/
+/*** components.scss 5181行目 ***/
 
 .account__header .account__header__fields {
   dt {
