--- a/app/javascript/styles/wallpaper.scss
+++ b/app/javascript/styles/wallpaper.scss
@@ -56,6 +56,58 @@ body {
   }
 }
 
+/*** stream_entries.scss ***/
+
+.activity-stream {
+  .entry {
+    background: rgba($ui-base-color, 0.3);
+  }
+}
+
+/*** containers.scss 135行目 ***/
+
+.public-layout {
+  .header {
+    background: rgba(lighten($ui-base-color, 8%), 0.3);
+  }
+
+/*** containers.scss 327行目 ***/
+
+  .public-account-header {
+    &__bar {
+      &::before {
+        background: rgba(lighten($ui-base-color, 4%), 0.3);
+      }
+    }
+  }
+
+/*** containers.scss 594行目 ***/
+
+  .public-account-bio {
+    background: rgba(lighten($ui-base-color, 8%), 0.3);
+  }
+}
+
+/*** widgets.scss ***/
+
+.hero-widget {
+  &__img {
+    background: rgba($base-shadow-color, 0.3);
+  }
+
+  &__text {
+    background: rgba($ui-base-color, 0.3);
+  }
+}
+
+.moved-account-widget {
+  background: rgba($ui-base-color, 0.3);
+}
+
+.memoriam-widget {
+  background: rgba($ui-base-color, 0.3);
+}
+
 /*** components.scss 747行目 ***/
 
 .focusable {
@@ -87,19 +139,19 @@ body {
   background: rgba(lighten($ui-base-color, 4%), 0.3);
 }
 
-/*** components.scss 977行目 ***/
+/*** components.scss 989行目 ***/
 
 .detailed-status__action-bar {
   background: rgba(lighten($ui-base-color, 4%), 0.3);
 }
 
-/*** components.scss 1105行目 ***/
+/*** components.scss 1117行目 ***/
 
 .account__header {
   background: rgba(lighten($ui-base-color, 4%), 0.3);
 }
 
-/*** components.scss 1761行目 ***/
+/*** components.scss 1765行目 ***/
 
 .column {
   > .scrollable {
@@ -107,13 +159,13 @@ body {
   }
 }
 
-/*** UIの背景全体 components.scss 1766行目 ***/
+/*** UIの背景全体 components.scss 1777行目 ***/
 
 .ui {
   background: rgba(darken($ui-base-color, 15%), 0.3);
 }
 
-/*** トゥート作成・検索欄 components.scss 1869行目 ***/
+/*** トゥート作成・検索欄 components.scss 1899行目 ***/
 
 .drawer__inner {
   background: rgba(lighten($ui-base-color, 13%), 0.3);
@@ -131,7 +183,7 @@ body {
   background: rgba(lighten($ui-base-color, 8%), 0.3);
 }
 
-/*** components.scss 2008行目 ***/
+/*** components.scss 2019行目 ***/
 
 .column-back-button {
   background: transparent;
@@ -141,7 +193,7 @@ body {
   background: transparent;
 }
 
-/*** components.scss 2171行目 ***/
+/*** components.scss 2183行目 ***/
 
 .column-link {
   background: rgba(lighten($ui-base-color, 12%), 0.3);
@@ -160,7 +212,7 @@ body {
   background: rgba($ui-base-color, 0.3);
 }
 
-/*** components.scss 2263行目 ***/
+/*** components.scss 2275行目 ***/
 
 .getting-started {
   &__trends {
@@ -168,19 +220,19 @@ body {
   }
 }
 
-/*** components.scss 2527行目 ***/
+/*** components.scss 2539行目 ***/
 
 .regeneration-indicator {
   background: rgba($ui-base-color, 0.3);
 }
 
-/*** components.scss 2603行目 ***/
+/*** components.scss 2615行目 ***/
 
 .column-header {
   background: rgba(lighten($ui-base-color, 4%), 0.3);
 }
 
-/*** components.scss 2656行目 ***/
+/*** components.scss 2668行目 ***/
 
 .column-header__button {
   background: transparent;
@@ -194,26 +246,26 @@ body {
   }
 }
 
-/*** components.scss 2705行目 ***/
+/*** components.scss 2717行目 ***/
 
 .column-header__collapsible-inner {
   background: rgba(lighten($ui-base-color, 8%), 0.6);
 }
 
-/*** components.scss 2965行目 ***/
+/*** components.scss 2977行目 ***/
 
 .empty-column-indicator,
 .error-column {
   background: rgba($ui-base-color, 0.3)
 }
 
-/*** components.scss 4834行目 ***/
+/*** components.scss 4846行目 ***/
 
 .account__section-headline {
   background: rgba(darken($ui-base-color, 4%), 0.3);
 }
 
-/*** components.scss 5285行目 ***/
+/*** components.scss 5297行目 ***/
 
 .account__header .account__header__fields {
   dt {
@@ -225,7 +277,7 @@ body {
   }
 }
 
-/*** components.scss 5323行目 ***/
+/*** components.scss 5335行目 ***/
 
 trends {
   &__header {
