--- a/app/views/about/show.html.haml
+++ b/app/views/about/show.html.haml
@@ -115,7 +115,7 @@
             = render 'features'
 
             .landing-page__features__action
-              = link_to t('about.learn_more'), 'https://joinmastodon.org/', class: 'button button-alternative'
+              = link_to t('about.learn_more_joinmastodon'), 'https://joinmastodon.org/', class: 'button button-alternative'
 
           .landing-page__footer
             %p
@@ -136,7 +136,7 @@
             = render 'features'
 
             .landing-page__features__action
-              = link_to t('about.learn_more'), 'https://joinmastodon.org/', class: 'button button-alternative'
+              = link_to t('about.learn_more_joinmastodon'), 'https://joinmastodon.org/', class: 'button button-alternative'
 
           .landing-page__footer
             %p
